--- a/OFFERS-342/mx/index.html
+++ b/OFFERS-342/mx/index.html
@@ -152,31 +152,30 @@
         <div class="instruction ">
           <p> Imagínese lo que sucederá después de 1-2 meses de ingesta diaria.<a href="{offer}" target="_blank"><b> CardioFort:</b></a>
           </p>
-          <span> te resultará fácil despertarte por la mañana</span>
-          <span> la presión volverá a la normalidad y disfrutará caminando al aire libre</span>
-          <span> en los hombres, la potencia regresará (incluso si es mayor de 70 años y ha tenido esta situación durante mucho tiempo)</span>
-          <span> dejará de "deslumbrar a los ojos"</span>
-          <span> tendrá más fuerza y ​​energía</span>
-          <span> su peso comenzará a disminuir fácil y naturalmente</span>
+          <span> Te resultará fácil despertarte por la mañana.</span>
+          <span> La presión volverá a la normalidad y disfrutará caminando al aire libre.</span>
+          <span> En los hombres, la potencia regresará (incluso si es mayor de 70 años y ha tenido esta situación durante mucho tiempo).</span>
+          <span> Tejará de "deslumbrar a los ojos".</span>
+          <span> Tendrá más fuerza y ​​energía.</span>
+          <span> Su peso comenzará a disminuir fácil y naturalmente.</span>
         </div>
         <div class="product-resule list">
-          <p class="list__item">
-            <span> La composición natural única de<b><a href="{offer}" target="_blank"> CardioFort</a></b> hace que este medicamento no solo sea efectivo, sino que también sea completamente seguro.</span>
+        
+            La composición natural única de<b><a href="{offer}" target="_blank"> CardioFort</a></b> hace que este medicamento no solo sea efectivo, sino que también sea completamente seguro.
 
-          </p>
           <p class="list__item">
             <span> Aceite de colza: fortalece los vasos sanguíneos y promueve una mejor absorción de glucosa.</span>
 
           </p>
-          <p class="list__item"><span> Motherwort: reduce la presión arterial, la viscosidad de la sangre y tiene un efecto beneficioso sobre el sistema nervioso</span></p>
+          <p class="list__item"><span> Motherwort: reduce la presión arterial, la viscosidad de la sangre y tiene un efecto beneficioso sobre el sistema nervioso.</span></p>
           <p class="list__item">
-            <span> Lúpulo: elimina la inflamación y promueve la pérdida de peso</span>
+            <span> Lúpulo: elimina la inflamación y promueve la pérdida de peso.</span>
           </p>
           <p class="list__item">
             <span> Espino amarillo: controla los niveles de insulina y ayuda con la resistencia a la insulina.</span>
           </p>
           <p class="list__item">
-            <span> Hojas de olivo: reducen el riesgo de diabetes</span>
+            <span> Hojas de olivo: reducen el riesgo de diabetes.</span>
           </p>
 
         </div>
@@ -190,7 +189,8 @@
         <p> Tomar solo 1 cápsula 3 veces al día con un vaso de agua restaurará la presión arterial y prolongará su vida.</p>
         <h4><a href="{offer}" target="_blank"> ¡Atención! ¡CardioFort se vende rápido! Para ordenar ahora mismo, siga el enlace</a></h4>
         <a href="{offer}" target="_blank" style="text-align: center; ">
-          <h4> ¡Ordene ahora y obtenga un 50% de descuento! Oferta limitada a<span class="get-date " data-day-delay="-2"> </span></h4>
+          <h4>¡Ordene ahora y obtenga un 50% de descuento!
+            Oferta limitada hasta el <span class="get-date " data-day-delay="-2"> </span></h4>
         </a>
         <a href="{offer}" target="_blank"><img style="width: 100%;" src="img/linc_2.png" alt></a>
 
@@ -207,7 +207,7 @@
           <div class="text">
             <p><b class="name"> Miguel</b> <span> 7:00</span> </p>
             <p> ¡Gracias por esta oportunidad! Lo he estado tomando por tres meses, ahora he pedido otro frasco para mi esposa.<a href="{offer}" target="_blank"> La presión dejó de subirme </a> Siento una oleada de fuerza y ​​el azúcar ha disminuído notablemente . Estoy muy satisfecho con el resultado.</p>
-            <a href="{offer}" target="_blank" class="comment__btn"><span> Respuesta</span> <img src="img/like.svg" alt> <b> diecinueve</b></a>
+            <a href="{offer}" target="_blank" class="comment__btn"><span> Respuesta</span> <img src="img/like.svg" alt> <b> 19</b></a>
           </div>
         </div>
         <div class="comment right">
@@ -248,9 +248,9 @@
         <div class="comment">
           <img src="img/ava6.png" alt>
           <div class="text">
-            <p><b class="name"> Ariana</b> <span> 11 en punto</span> </p>
+            <p><b class="name"> Ariana</b> <span> 11:00</span> </p>
             <p> ¿Dónde ordenaste todo? Realmente no me gusta hacer pedidos en Internet</p>
-            <a href="{offer}" target="_blank" class="comment__btn"><span> Respuesta</span> <img src="img/like.svg" alt> <b> catorce</b></a>
+            <a href="{offer}" target="_blank" class="comment__btn"><span> Respuesta</span> <img src="img/like.svg" alt> <b> 14</b></a>
           </div>
         </div>
         <div class="comment right">
@@ -265,7 +265,7 @@
         <div class="comment">
           <img src="img/ava8.png" alt>
           <div class="text">
-            <p><b class="name"> Elvira</b> <span> 13 horas</span> </p>
+            <p><b class="name"> Elvira</b> <span> 13:00</span> </p>
             <p> ¡Te leo y entiendo qué pedir! Espero que me quede bien y que no haya efectos secundarios.</p>
             <a href="{offer}" target="_blank" class="comment__btn"><span> Respuesta</span> <img src="img/like.svg" alt> <b> 27</b></a>
           </div>
@@ -274,7 +274,7 @@
         <div class="comment">
           <img src="img/ava9.png" alt>
           <div class="text">
-            <p><b class="name"> Maria</b> <span> 15 horas</span> </p>
+            <p><b class="name"> Maria</b> <span> 15:00</span> </p>
             <p> exactamente esto<a href="{offer}" target="_blank"> EL MEJOR remedio</a> Declaro como un hipertenso experimentado. Más precisamente, se puede decir que uda es un exhipertenso</p>
             <a href="{offer}" target="_blank" class="comment__btn"><span> Respuesta</span> <img src="img/like.svg" alt> <b> 41</b></a>
           </div>
@@ -283,7 +283,8 @@
       </div>
 	  
         <a href="{offer}" target="_blank" style="text-align: center; ">
-          <h4> ¡Ordene ahora y obtenga un 50% de descuento!<br> Oferta limitada a<span class="get-date " data-day-delay="-2"> </span></h4>
+          <h4>¡Ordene ahora y obtenga un 50% de descuento!
+            Oferta limitada hasta el <span class="get-date " data-day-delay="-2"> </span></h4>
         </a>
 	  
     </div>
