--- a/OFFERS-355/ru/index.html
+++ b/OFFERS-355/ru/index.html
@@ -22,17 +22,17 @@
       <div class="header__top">
         <div class="container">
           <span class="get-date" data-day-delay='9'></span>
-        
-         <a href="" class="weather">
-<img src="img/weather.svg" alt="">
-<span>Погода</span>
-         </a>
+
+          <a href="" class="weather">
+            <img src="img/weather.svg" alt="">
+            <span>Погода</span>
+          </a>
         </div>
       </div>
       <div class="header__menu">
         <div class="container">
-  <div class="box">
-    <a href="">
+          <div class="box">
+            <a href="">
               <div class="header__mob">
                 <button><img src="img/humb.svg" alt=""></button>
               </div>
@@ -45,7 +45,7 @@
               <a href="">Vídeo</a>
               <a href="">Vida</a>
             </div>
-  </div>
+          </div>
           <div class="header__loop">
             <a href=""><img src="img/loop.svg" alt=""></a>
           </div>
@@ -59,48 +59,57 @@
 
     <div class="content">
       <div class="blog">
-        <h1><a href="">Cardioforte - капли,</a> которые нормализуют давление, улучшают кровообращение, способствуют избавлению от избыточного веса в любом возрасте.</h1>
+        <h1><a href="">Cardioforte - капли,</a> которые нормализуют давление, улучшают кровообращение, способствуют
+          избавлению от избыточного веса в любом возрасте.</h1>
 
-        <div class="bagr" style="margin: 0 auto; background-image: url(img/blog.jpg);">
+        <div class="bagr" style=" background-image: url(img/blog.jpg);">
           <p>
-            95 летний кардиолог предлагает забыть о гипертонической болезни до глубокой старости и получать удовольствие от каждого дня долголетия. 
+            95 летний кардиолог предлагает забыть о гипертонической болезни до глубокой старости и получать удовольствие
+            от каждого дня долголетия.
 
-            Оставив профессиональную деятельность в возрасте 75 лет, он уже в течение 20 лет ведет активный образ жизни с нормальным артериальным давлением и без проблем с сердцем.</p>
+            Оставив профессиональную деятельность в возрасте 75 лет, он уже в течение 20 лет ведет активный образ жизни
+            с нормальным артериальным давлением и без проблем с сердцем.</p>
         </div>
-        <p>Доктор специализируется на органах <a href="">системы кровообращения</a> и за свою медицинскую практику вылечил тысячи пациентов, страдающих от нарушения артериального давления. Он сформировал статистику, основанную на результатах медицинского обследования, лечения людей разного возраста, и пришел к выводу, что профилактика и своевременное реагирование на симптомы позволяет быстро остановить развитие болезней сердца, сосудов.
-<br> <br>
-          В статье он объясняет влияние нормального кровообращения на общее состояние человека, описывает последствия безответственного отношения к своему здоровью. Прекрасное самочувствие доктора является лучшей гарантией эффективности его рекомендаций.
+        <p>Доктор специализируется на органах <a href="">системы кровообращения</a> и за свою медицинскую практику
+          вылечил тысячи пациентов, страдающих от нарушения артериального давления. Он сформировал статистику,
+          основанную на результатах медицинского обследования, лечения людей разного возраста, и пришел к выводу, что
+          профилактика и своевременное реагирование на симптомы позволяет быстро <a href="">остановить развитие болезней
+            сердца, сосудов.</a>
           <br> <br>
-          Мы воспользовались возможностью и задали доктору важные вопросы, ответы на которые помогут нашим читателям оставаться здоровыми и молодыми до 90 лет. Доктор убежден, что нормальное кровообращение исключает риск развития опасных болезней и продлевает жизнь.
-          </p>
-
-        <div class="pfo" style="margin: 0 auto; max-width: 648px; width: 100%;">
-
-          <h4>Степени развития артроза коленного сустава</h4>
-
-
-          <span class="span-1">Разрушение суставного хряща</span> <span class="span-2">Остеофиты
-            (костные разрастания)
-            на суставных поверхностях</span>
-
-          <p class="degree"><b>1 степень</b> <b>2 степень</b> <b>3 степень</b></p>
-        </div>
-        <h4>- Господин Х, вы утверждаете, что здоровье человека в целом основано <a href="">на здоровых суставах.</a>
-          Почему они так важны?</h4>
-        <p>- Давайте обратимся к теории медицины и дадим популярное определение предмету нашего разговора. Соединения
-          костей скелета называются суставами, которых более 230 в человеческом организме. Они могут быть подвижными,
-          например, коленный сустав, и неподвижными - части черепной коробки.
+          В статье он объясняет влияние нормального кровообращения на общее состояние человека, описывает последствия
+          безответственного отношения к своему здоровью. Прекрасное самочувствие доктора является лучшей гарантией
+          эффективности его рекомендаций.
           <br> <br>
-          <a href="">Суставы представляют собой сложную конструкцию.</a> Кости в месте подвижного соединения покрыты
-          хрящевыми суставными поверхностями, между которыми образуется полость, герметически защищенная синовиальной
-          оболочкой. Так называемая суставная сумка состоит из плотных, прочных волокон и укреплена связками,
-          сухожилиями прилегающих мышц, сдерживающими расшатывание сустава. Полость заполнена жидкостью, питающей и
-          увлажняющей сустав, к которому также подведены лимфатические и кровеносные сосуды. Описанная конструкция
-          предназначена для амортизации нагрузки на суставы во время движения конечностей, предотвращения стирания
-          примыкающих костей и защиты от ударов извне. К ней подведены множественные нервные окончания, поэтому при
-          заболеваниях суставов возникают болевые ощущения.
-
+          Мы воспользовались возможностью и задали доктору важные вопросы, ответы на которые помогут нашим читателям
+          оставаться здоровыми и молодыми до 90 лет. Доктор убежден, что нормальное кровообращение исключает риск
+          развития опасных болезней и продлевает жизнь.
         </p>
+        <h4>- Господин Х, вы утверждаете, что полноценная жизнь здорового человека зависит от нормального
+          кровообращения. Объясните, пожалуйста, к чему могут приводить проблемы с этой системой жизнедеятельности, и
+          как их избежать?
+        </h4>
+        <p>Для начала я предлагаю короткий экскурс в суть вопроса. Вряд ли многие знают, как устроена система
+          кровообращения. Я постараюсь популярно донести до ваших читателей основную идею.
+          <br><br>
+          Кровообращение – это движение крови по организму, которое обеспечивает <a href="">сердечно-сосудистая
+            система,</a> состоящая из сердца, артериальной и венозной подсистем, в свою очередь состоящих из сосудов –
+          эластичных трубок разного диаметра (артерий, артериол, вен, венул и мельчайших капилляров).
+          <br> <br>
+          Сосудистая сеть распространена по всему телу. Ритмичная <a href="">работа сердца</a> (функционирующего по
+          принципу насоса) создает разницу в давлении двух подсистем, что обеспечивает постоянную циркуляцию крови. За
+          одну минуту сердце сокращается 60 раз, направляя и ускоряя доставку крови, насыщенной кислородом и
+          питательными веществами, к каждой клетке организма и обратную доставку «грязной» крови, отдавшей кислород и
+          накопившей углекислый газ, обратно к сердцу и легочной артерии для обогащения и запуска по новому кругу.
+        </p>
+        <div class="img" style="margin: 0 auto;"><img src="img/blog2.jpg" alt="">
+          <span><b>кровеносная система</b></span>
+        </div>
+        <br>
+        <p><a href="">Давление,</a> которое запускает кровь в движение, измеряется в момент сокращения сердечной мышцы (верхнее или систолическое давление) и в момент расслабления (нижнее или диастолическое давление). Таким образом, давление состоит из двух параметров. Мы знаем, что диапазон нормы для обоих показателей зависит от пола и возраста. Для определения состояния здоровья пациента ориентируемся на норму: верхнее 120-140 мм рт. ст., нижнее – около 70-80 мм рт. ст. Чем старше человек, тем давление выше. 
+          <br> <br>
+          В течение дня давление колеблется, но незначительные отклонения не влияют на здоровье организма, так как системы жизнедеятельности приспособлены к изменениям в рамках нормы. Сосуды имеют эластичные стенки, поэтому способны растягиваться при повышении давления, таким образом его нормализуя. Если механизм компенсации прекращает действовать, то возникают заболевания.
+          При стабильном превышении нормы <a href="">диагностируется гипертония.</a> При стабильно низком давлении диагностируется гипотония. Оба состояния способствуют развитию сопутствующих заболеваний, ухудшают общее состояние пациента.
+          </p>
         <div class="border">
           <b>В зависимости от функций суставы бывают трех видов:</b>
           <ul>
@@ -393,7 +402,7 @@
     </div>
 
     <div class="sidebar">
-      <a  href="" class="sidebar__new">
+      <a href="" class="sidebar__new">
         <p>
           hechosnews24
           Прямой эффир из нашей студии
@@ -408,15 +417,15 @@
         <span>Перейти на страницу <b> 101</b></span>
       </a>
       <a href="" class="sidebar__new">
-       <span>День Земли</span>
-       <p>ДЕНЬ ЗЕМЛИ 
-        ЕМУ ИСПОЛНЯЕТСЯ 50 ЛЕТ. МАРАФОН ОНЛАЙН И В ТЕЛЕВИЗОР ДЛЯ НАШЕГО 
-        ПЛАНЕТА</p>
+        <span>День Земли</span>
+        <p>ДЕНЬ ЗЕМЛИ
+          ЕМУ ИСПОЛНЯЕТСЯ 50 ЛЕТ. МАРАФОН ОНЛАЙН И В ТЕЛЕВИЗОР ДЛЯ НАШЕГО
+          ПЛАНЕТА</p>
       </a>
       <a class="sidebar__new">
         <p>Динамика роста заболевший</p>
-       </a>
-       
+      </a>
+
     </div>
 
   </main>
