--- a/OFFERS-355/ru/index.html
+++ b/OFFERS-355/ru/index.html
@@ -178,10 +178,28 @@
           Очень важно не относиться халатно к своему здоровью и контролировать давление даже при хорошем самочувствии.
           Тем более, если уже диагностирована гипертония или гипотония, измерять давление нужно постоянно.
         </p>
-        <div class="bagr" style="margin: 0 auto; background-image: url(img/blog3.jpg);">
-          <p>
-            “Я до сих пор вожу машину, а для вождение нужна подвижность суставов ног и рук. Спортиные авто моя страсть!”
-          </p>
+        <div class="img-prod" >
+         <h2>ОСЛОЖНЕНИЯ ОТ ГИПЕРТОНИИ</h2>
+         <div class="img-prod__item">
+           <b>МОЗГ</b>
+           <p>ИНСУЛЬТ</p>
+         </div>
+         <div class="img-prod__item">
+          <b>СОСУДЫ</b>
+          <p>АТЕРОСКЛЕРОЗ</p>
+        </div>
+        <div class="img-prod__item">
+          <b>ГЛАЗА</b>
+          <p>РЕТИНОПАТИЯ</p>
+        </div>
+        <div class="img-prod__item">
+          <b>СЕРДЦЕ</b>
+          <p>ИНФАРКТ МИОКАРДА</p>
+        </div>
+        <div class="img-prod__item">
+          <b>ПОЧКИ</b>
+          <p>ПОЧЕЧНАЯ НЕДОСТАТОЧНОСТЬ</p>
+        </div>
         </div>
         <h4>- Давайте перечислим симптомы отклонений от нормы в кровообращении?</h4>
         <p>- Итак, под воздействием чрезмерных физических и эмоциональных нагрузок, которые приводят к переутомлению,
@@ -327,7 +345,7 @@
             Купить Cardioforte на официальном сайте
           </h2>
         </a>
-<br> <br>
+        <br> <br>
         <div class="advertising">
           <div class="advertising__item">
             <a href="" class="box">
@@ -336,10 +354,10 @@
                 Студент заплатит 1 млн долларов за подглядывание за звездами
               </p>
             </a>
-       <a href="" class="link">Читать больше...</a>
+            <a href="" class="link">Читать больше...</a>
           </div>
           <div class="advertising__item">
-         
+
             <a href="" class="box">
               <img src="img/adve2.jpg" alt="">
               <p><b>Как нас обманывают</b>
@@ -350,7 +368,7 @@
           </div>
         </div>
       </div>
-      <div class="comments">  
+      <div class="comments">
         <h2>Комментарии</h2>
         <div class="comments__form">
           <div class="box">
@@ -361,29 +379,24 @@
 
         </div>
         <br><br>
-      
+
         <div class="comment">
           <img src="img/ava1.png" alt="">
           <div class="text">
-            <b class="name">Луиза</b>
+            <b class="name">Антон</b>
             <p>
-              Чудесное <a href="">средство!</a> Без преувеличений. Я не знаю, в каком состоянии сустав – не проходил
-              обследования, но о
-              болях забыл после применения <a href="">Фортуфлекс.</a>
-
-            </p>
+              Мне 78 лет. Cardioforte уже принимаю около года. Самочувствие отличное. Давление пришло в норму, стал
+              активнее, бодрее, исчезла одышка. В статье все очень правильно написано. Не затягивайте и начинайте
+              заботиться о своем сердце уже сейчас.</p>
             <a href="" class="comment__btn"><span class="get-date" data-day-delay='9'></span></a>
           </div>
         </div>
-        <div class="comment">
+        <div class="comment right">
           <img src="img/ava2.png" alt="">
           <div class="text">
-            <b class="name">Людмила</b>
+            <b class="name">Олеся</b>
             <p>
-              Каждый раз, когда возникает ноющая боль в колене, втираю <a href="">мазь</a> и за пару секунд (буквально!)
-              чувствую
-              облегчение - могу уснуть без проблем. Никакой ибупрофен не дает такой результат.
-
+              Ох, моему папе тоже 78, нужно и правда ответственнее подходить к этому вопросу
             </p>
             <a href="" class="comment__btn"><span class="get-date" data-day-delay='8'></span></a>
           </div>
@@ -391,94 +404,106 @@
         <div class="comment">
           <img src="img/ava3.png" alt="">
           <div class="text">
-            <b class="name">Сан Саныч</b>
+            <b class="name">Мария</b>
             <p>
-              Абсолютно безопасный и на удивление эффективный метод <a href="">лечения суставов.</a> Мои ноги с подагрой
-              сказали крему
-              «спасибо». Обязательный препарат в моей аптечке.</p>
+              После 60 лет стала стремительно набирать вес. Ничего вредного не ем почти, от сладкого отказалась. Не
+              помогает. Только эти капли остановили процесс. Мало того, потихоньку восстанавливаются мои привычные
+              килограммы. Никаких побочных эффектов. Переносится отлично. Вкус травяной, приятный. Рекомендую, милые
+              дамы, как средство для похудения с массой приятных дополнений.
+            </p>
             <a href="" class="comment__btn"><span class="get-date" data-day-delay='10'></span></a>
           </div>
         </div>
         <div class="comment">
           <img src="img/ava4.png" alt="">
           <div class="text">
-            <b class="name">Анатолий Сергеевич</b>
+            <b class="name">Игорь</b>
             <p>
-              Доктору огромная благодарность за подробное раскрытие темы. Честно, никогда не интересовался суставами с
-              точки зрения устройства, причин <a href="">болей.</a> Думал – возрастное, никуда не денешься. Это – самая
-              большая ошибка
-              – мириться с болью в возрасте после 60 лет. НЕТ! Средство продляющее молодость суставов существует! Знаю
-              на своем опыте!</p>
+              Снизил давление с первого приема. У меня гипертония с относительного молодого возраста. К 54 стал все хуже
+              себя чувствовать. Кардиофорте решил проблему за месяц. Уже начинаю забывать о симптомах. Знаете: когда
+              здоровый организм не замечаешь.
+            </p>
             <a href="" class="comment__btn"><span class="get-date" data-day-delay='9'></span></a>
           </div>
         </div>
         <div class="comment">
           <img src="img/ava5.png" alt="">
           <div class="text">
-            <b class="name">Виктор Ерези</b>
+            <b class="name">Владимир</b>
             <p>
-              Странно, что такой простой состав мази работает. Но это так! Дело наверное в формуле, соотношении,
-              возможно, еще есть второстепенные вещества,к оторые доставляют активные элемент по назначению – это чудо.
-              Настолько большая разница до и после применения. Рекомендую настоятельно.
-            </p>
+              Интересная статья. Доктору спасибо за разъяснения и рекомендации.</p>
             <a href="" class="comment__btn"><span class="get-date" data-day-delay='6'></span></a>
           </div>
         </div>
         <div class="comment">
           <img src="img/ava6.png" alt="">
           <div class="text">
-            <b class="name">Анастасия</b>
+            <b class="name">Тарас</b>
             <p>
-              Полезная статья. Перешла <a href="">по ссылке</a> и заказала мазь. Спасибо.</p>
+              Было интересно читать. Так обстоятельно и просто написано. Все понятно, одно вытекает из другого. Стали
+              понятны причины недомоганий и способы борьбы с ними. Еще бы написали, какие основные анализы сдать, чтобы
+              проверить состояние сердечно-сосудистой системы. Капли куплю.
+            </p>
             <a href="" class="comment__btn"><span class="get-date" data-day-delay='1'></span></a>
           </div>
         </div>
-        <a href="" style="text-align: center; ">
-          <h2>Читать еще 321 комментариев</h2>
-        </a>
-        <a href="" style="text-align: center; ">
-          <h2>Важно! Если вы поспешите, то успеете приобрести мазь с 50% скидкой здесь</h2>
+        <div class="comment">
+          <img src="img/ava7.png" alt="">
+          <div class="text">
+            <b class="name">Марина</b>
+            <p>
+              Состав капель отличный. Прям, все гомеопатичекое, никакой химии. Однозначно нужны мне.</p>
+            <a href="" class="comment__btn"><span class="get-date" data-day-delay='1'></span></a>
+          </div>
+        </div>
+        <div class="comment">
+          <img src="img/ava8.png" alt="">
+          <div class="text">
+            <b class="name">Александр</b>
+            <p>
+              Уже заказал препарат. Жду доставку. Когда приедет, попробую и напишу впечатление.
+
+            </p>
+            <a href="" class="comment__btn"><span class="get-date" data-day-delay='1'></span></a>
+          </div>
+        </div>
+        <a href="">
+          <h2>
+            Купить Cardioforte на официальном сайте
+          </h2>
         </a>
       </div>
     </div>
 
     <div class="sidebar">
-      <a href="" class="sidebar__new">
-        <p>
-          hechosnews24
-          Прямой эффир из нашей студии
-        </p>
-      </a>
-      <a href="" class="sidebar__new">
-        <p>
-          hechos
-          телевидение
-        </p>
-        <span>Перейти на страницу <b> 101</b></span>
-        <span>Перейти на страницу <b> 101</b></span>
-      </a>
-      <a href="" class="sidebar__new">
-        <span>День Земли</span>
-        <p>ДЕНЬ ЗЕМЛИ
-          ЕМУ ИСПОЛНЯЕТСЯ 50 ЛЕТ. МАРАФОН ОНЛАЙН И В ТЕЛЕВИЗОР ДЛЯ НАШЕГО
-          ПЛАНЕТА</p>
-      </a>
-      <a class="sidebar__new">
-        <p>Динамика роста заболевший</p>
-      </a>
+      <div class="sidebar__item">
+        <h2>БЛОГ</h2>
+        <img src="img/side1.jpg" alt="">
+        <p>Ревматолог из Архангельска составил список вредных физических нагрузок...</p>
+      </div>
+      <div class="sidebar__item">
+        <h2>Последние новости</h2>
+        <p><span>Телефонные звонки во время полета станут доступной опцией, пишут СМИ</span> <span class="get-date"
+            data-day-delay='1'></span></p>
+        <p><span>В США призвали ввести санкции
 
+          </span> <span class="get-date" data-day-delay='2'></span></p>
+        <p><span>Длительный COVID" оказался способным убивать пациентов спустя месяцы после заражения</span> <span
+            class="get-date" data-day-delay='3'></span></p>
+        <p><span>В ЕС решили посвятить очный саммит проблемам отношений...</span> <span class="get-date"
+            data-day-delay='4'></span></p>
+        <p><span>В Бейруте после назначения нового премьер-министра возобновились протесты
+
+          </span> <span class="get-date" data-day-delay='5'></span></p>
+        <br>
+        <h2>Рекомендации</h2>
+        <img src="img/side2.jpg" alt="">
+        <b>Королевская семья, все тайны и недомолвки между братьями Гарри и Уильямом...</b>
+        <br>
+      </div>
     </div>
 
   </main>
-
-  <div class="overlay"></div>
-
-  <div class="sweet-text-hidden" style="display: none;">
-    <div class="sweet-title"> Поздравляем!</div>
-    <div class="sweet-text">Вы в числе 4% счастливчиков, которые выиграли такую же скидку. Но спешите, её действие –
-      ограничено</div>
-    <div class="sweet-button"> Получить скидку</div>
-  </div>
   <script src="libs/carousel/owl.carousel.min.js"></script>
   <script src="js/timer.js"></script>
   <script src="js/common.js"></script>
