--- a/OFFERS-381/ro/index.html
+++ b/OFFERS-381/ro/index.html
@@ -252,7 +252,23 @@
                     </div>
                     <a href="#popup-content" class="button popup-btn"> COMANDA CU REDUCERE</a>
                 </div>
-            
+                <div class="product_item">
+                    <div class="product_item-img ">
+                        <img src="img/5.jpg" alt="product">
+                    </div>
+                    <div class="discount"> -50% </div>
+                    <div class="vendor_code"> Brățară I love you</div>
+                    <div class="vendor_description"> Brățara "Te iubesc". Punctul " Forte "este proiecția" Te iubesc " în 100 de limbi ale lumii. În interiorul pandantivului, textul "Te iubesc" este gravat în 100 de limbi.</div>
+                    <div class="price_block clearfix">
+                        <div class="price_item old">
+                            <x-oldprice> 370 LEI</x-oldprice>
+                        </div>
+                        <div class="price_item new">
+                            <x-newprice> 185 LEI</x-newprice>
+                        </div>
+                    </div>
+                    <a href="#popup-content" class="button popup-btn"> COMANDA CU REDUCERE</a>
+                </div>
             </div>
         </div>
     </section>
