--- a/OFFERS-381/bg/index.html
+++ b/OFFERS-381/bg/index.html
@@ -308,25 +308,25 @@
             <div class="reviews_list owl-carousel">
                 <div class="review_item gkhkuito">
                     <div class="text_block">
-                        <img src="img/IMG_9500.JPG" alt>
+                        <img src="img/IMG_9500.jpg" alt>
 
                     </div>
                 </div>
                 <div class="review_item gkhkuito">
                     <div class="text_block">
-                        <img src="img/IMG_9501.JPG" alt>
+                        <img src="img/IMG_9501.jpg" alt>
 
                     </div>
                 </div>
                 <div class="review_item gkhkuito">
                     <div class="text_block">
-                        <img src="img/IMG_9502.JPG" alt>
+                        <img src="img/IMG_9502.jpg" alt>
 
                     </div>
                 </div>
                 <div class="review_item gkhkuito">
                     <div class="text_block">
-                        <img src="img/IMG_9503.JPG" alt>
+                        <img src="img/IMG_9503.jpg" alt>
 
                     </div>
                 </div>
