--- a/OFFERS-381/bg/index.html
+++ b/OFFERS-381/bg/index.html
@@ -182,7 +182,17 @@
                     </div>
                     <div class="discount"> -50% </div>
                     <div class="vendor_code"> Love Forever</div>
-                    <div class="vendor_description"><b> Love Forever </b> е комплект гривна и медальон, който символизира истинска близост. Гривната се отключва само когато сте заедно. Перфектен подарък за любимия/любимата</div>
+                    <div class="vendor_description"><b> Love Forever </b> Love Forever е комплект гривна и медальон, който символизира истинска близост. Гривната се отключва само когато сте заедно. Перфектен подарък за любимия/любимата.
+                        <br> <br>
+                        Материал: медицинска хипоалергенна стомана
+                        <br> <br>
+                        Цвят по избор: сребро или розово злато
+                        <br> <br>
+                        Особености: надеждно трислойно покритие
+                        <br> <br>
+                        Размер на гривната: универсален
+                        <br> <br>
+                        Дължина на синджирчето на медальона:  50 см</div>
                     <div class="price_block clearfix">
                         <div class="price_item old">
                             <x-oldprice> 150 ЛЕВА</x-oldprice>
@@ -220,7 +230,13 @@
                     </div>
                     <div class="discount"> -50% </div>
                     <div class="vendor_code"> Love ring</div>
-                    <div class="vendor_description"><b> Love ring </b> e уникален пръстен със стилен дизайн, който позволява проектиране на фразата "Обичам те" на 100 езика.</div>
+                    <div class="vendor_description"><b> Love ring </b>e уникален пръстен със стилен дизайн, който позволява проектиране на фразата "Обичам те" на 100 езика.
+                        <br> <br> 
+                        Цвят по избор: сребро/злато
+                        <br> <br> 
+                        Материал: медицинска стомана
+                        <br> <br> 
+                        Размер: универсален</div>
                     <div class="price_block clearfix">
                         <div class="price_item old">
                             <x-oldprice> 150 ЛЕВА</x-oldprice>
@@ -239,7 +255,13 @@
                     </div>
                     <div class="discount"> -50% </div>
                     <div class="vendor_code"> Love Pendant</div>
-                    <div class="vendor_description"><b> Love Pendant </b> e красив и елегантен медальон-висулка, който позволява проектиране на фразата "Обичам те" на 100 езика</div>
+                    <div class="vendor_description"><b> Love Pendant </b> e красив и елегантен медальон-висулка, който позволява проектиране на фразата "Обичам те" на 100 езика.
+                        <br> <br>
+                        Цвят по избор: сребро/злато
+                        <br> <br>
+                        Материал: медицинска стомана
+                        <br> <br>
+                        Тегло: 15 грама</div>
                     <div class="price_block clearfix">
                         <div class="price_item old">
                             <x-oldprice> 150 ЛЕВА</x-oldprice>
