--- a/OFFERS-381/cz/index.html
+++ b/OFFERS-381/cz/index.html
@@ -102,7 +102,8 @@
     <header class="header_section">
         <div class="title_block">
             <div class="wrapper">
-                <h1 class="flag"> SHINY DROP - МАГАЗИН ЗА УНИКАЛНИ БИЖУТА</h1>
+                <h1 class="flag">SHINY DROP -
+                    JEDINEČNÝ ŠPERKOVÝ OBCHOD</h1>
 
             </div>
         </div>
