--- a/OFFERS-379/it-2/index.html
+++ b/OFFERS-379/it-2/index.html
@@ -83,7 +83,7 @@
 
 							</div>
 						</div>
-						<a data-fancybox class="button" href="#order_form"> MAGGIORI INFORMAZIONI</a>
+						<a data-fancybox class="button" href="#order_form">DETTAGLI</a>
 					</div>
 				</div>
 				<!-- item -->
@@ -119,7 +119,7 @@
 
 							</div>
 						</div>
-						<a data-fancybox class="button order" href="#order_form"> MAGGIORI INFORMAZIONI</a>
+						<a data-fancybox class="button order" href="#order_form">DETTAGLI</a>
 					</div>
 				</div>
 				<div class="prod_item">
@@ -149,7 +149,7 @@
 
 							</div>
 						</div>
-						<a data-fancybox class="button order" href="#order_form"> MAGGIORI INFORMAZIONI</a>
+						<a data-fancybox class="button order" href="#order_form">DETTAGLI</a>
 					</div>
 				</div>
 				<div class="prod_item">
@@ -172,7 +172,7 @@
 										<x-currency> € </x-currency>
 									</small> </div>
 							</div>
-							<div class="prod_description"> La pulizia in cucina richiede molto sforzo: pulizia e riordino costante dei fornelli, dei piani di lavoro, dei piatti. Ma ora, grazie allo schermo di sicurezza, non c'è bisogno di pulire le pareti intorno ai fornelli. Collocate una struttura leggera e mobile di alluminio intorno alla padella, e gli schizzi della frittura voleranno sulle pareti del prodotto, non sulle pentole e gli utensili vicini.<br> <br> MAGGIORI INFORMAZIONI<ul>
+							<div class="prod_description"> La pulizia in cucina richiede molto sforzo: pulizia e riordino costante dei fornelli, dei piani di lavoro, dei piatti. Ma ora, grazie allo schermo di sicurezza, non c'è bisogno di pulire le pareti intorno ai fornelli. Collocate una struttura leggera e mobile di alluminio intorno alla padella, e gli schizzi della frittura voleranno sulle pareti del prodotto, non sulle pentole e gli utensili vicini.<br> <br>DETTAGLI<ul>
 									<li> Materiale molto solido.</li>
 									<li> Protezione efficace.</li>
 									<li> Facilità d'uso.</li>
@@ -186,7 +186,7 @@
 
 							</div>
 						</div>
-						<a data-fancybox class="button order" href="#order_form"> MAGGIORI INFORMAZIONI</a>
+						<a data-fancybox class="button order" href="#order_form">DETTAGLI</a>
 					</div>
 				</div>
 				<div class="prod_item">
@@ -220,7 +220,7 @@
 
 							</div>
 						</div>
-						<a data-fancybox class="button order" href="#order_form"> MAGGIORI INFORMAZIONI</a>
+						<a data-fancybox class="button order" href="#order_form">DETTAGLI</a>
 					</div>
 				</div>
 				<div class="prod_item">
@@ -259,10 +259,44 @@
 
 							</div>
 						</div>
-						<a data-fancybox class="button order" href="#order_form"> MAGGIORI INFORMAZIONI</a>
+						<a data-fancybox class="button order" href="#order_form">DETTAGLI</a>
 					</div>
 				</div>
-		
+				<div class="prod_item">
+					<div class="img">
+						<img src="img/prod11_1.jpg" alt>
+						<img src="img/prod11_2.jpg" alt>
+					</div>
+					<div class="description">
+						<div class="text">
+							<p class="prod_name">LEATHER KIT PRO</p>
+							<div class="price">
+								<div class="old"><span>
+										<x-oldprice> 98</x-oldprice>
+									</span><small>
+										<x-currency> € </x-currency>
+									</small></div>
+								<div class="new"><span>
+										<x-newprice> 49</x-newprice>
+									</span><small>
+										<x-currency> € </x-currency>
+									</small> </div>
+							</div>
+							<div class="prod_description">Leather Kit Pro - un prodotto unico per la riparazione di articoli in pelle, ecopelle e qualsiasi tipo di similpelle. Si tratta di una sostanza simile alla colla, che viene applicata sulla zona danneggiata e, asciugandosi, restituisce l'aspetto originale. Il prodotto non richiede un trattamento termico (essiccazione, riscaldamento), ha un'alta resistenza e plasticità, non si delamina dopo l'essiccazione. Un set comprende 7 barattoli di diversi colori (nero, bianco, rosso, blu, verde, marrone, giallo).<br> <br>Leather Kit Pro eliminerà facilmente:<ul>
+									<li>Graffi</li>
+									<li>Tagli</li>
+									<li>Crepe</li>
+							<li>Buchi</li>
+							<li>Rigature</li>
+							<li>E altri difetti!</li>
+								</ul>
+							
+
+							</div>
+						</div>
+						<a data-fancybox class="button order" href="#order_form">DETTAGLI</a>
+					</div>
+				</div>
 				<!-- /item -->
 			</div>
 			<!-- <a class="button order1" href="#size_table" data-fancybox>Размерная сетка</a> -->
