--- a/OFFERS-379/it/index.html
+++ b/OFFERS-379/it/index.html
@@ -83,7 +83,7 @@
 
 							</div>
 						</div>
-						<a data-fancybox class="button" href="#order_form"> MAGGIORI INFORMAZIONI</a>
+						<a data-fancybox class="button" href="#order_form">DETTAGLI </a>
 					</div>
 				</div>
 				<!-- /item -->
@@ -123,7 +123,7 @@
 
 							</div>
 						</div>
-						<a data-fancybox class="button order" href="#order_form"> MAGGIORI INFORMAZIONI</a>
+						<a data-fancybox class="button order" href="#order_form">DETTAGLI </a>
 					</div>
 				</div>
 				<!-- /item -->
@@ -160,7 +160,7 @@
 
 							</div>
 						</div>
-						<a data-fancybox class="button order" href="#order_form"> MAGGIORI INFORMAZIONI</a>
+						<a data-fancybox class="button order" href="#order_form">DETTAGLI </a>
 					</div>
 				</div>
 
@@ -195,7 +195,7 @@
 
 							</div>
 						</div>
-						<a data-fancybox class="button order" href="#order_form"> MAGGIORI INFORMAZIONI</a>
+						<a data-fancybox class="button order" href="#order_form">DETTAGLI </a>
 					</div>
 				</div>
 
